<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="actionbar_item_title_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="activity_comments_label">YCreader Comments viewer</string>
    <string name="app_name">YCreader</string>
    <string name="by_prefix">by\u00A0</string>
    <string name="color_band_content_description">A color band, only decorative</string>
    <string name="comment_bubble_description">A comment bubble</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="frontpage">Frontpage</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="literal_ago">\u00A0ago</string>
    <string name="loading_hint">If nothing happens, try tapping refresh</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="navigate_down">Navigate down</string>
    <string name="navigate_up">Navigate up</string>
    <string name="nbsp">\u00A0</string>
    <string name="open_link">Open link</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="share">Share</string>
    <string name="share_comments">Share comments</string>
    <string name="share_story">Share story</string>
    <string name="status_loading_more_data">Loading more data…</string>
    <string name="toggle_show_starred_only">Starred</string>
    <string name="search_title">Search</string>
    <string name="toggle_starred">Toggle starred</string>
    <string name="io_service_label">IO Service</string>
    <string name="strict_mode_service_label">StrictMode violation watcher service</string>
    <string name="icon_score_description">A score icon</string>
    <string name="a_grey_colored_divider">A grey colored divider.</string>

</resources>
