<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".newsthreads.NewsThreadsActivity">

    <item
            android:id="@+id/search"
            android:title="@string/search_title"
            android:orderInCategory="0"
            android:icon="@drawable/ic_search_24dp"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
            android:id="@+id/toggle_show_starred_only"
            android:title="@string/toggle_show_starred_only"
            android:orderInCategory="2"
            android:icon="@drawable/ic_star_24dp"
            app:showAsAction="ifRoom"
            />


    <item
            android:id="@+id/refresh"
            android:title="@string/actionbar_item_title_refresh"
            android:orderInCategory="3"
            android:icon="@drawable/ic_refresh_24dp"
            app:showAsAction="ifRoom"
            />
</menu>
