<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/comments_header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        tools:text="Overly loooooong title that will totatally need a linebreak, now let's type some more to provoke ellipsizing. Are we there yet?"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/icon_comment"
        android:layout_marginEnd="8dp" />


    <TextView
        android:id="@+id/by_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_prefix"
        app:layout_constraintBaseline_toBaselineOf="@+id/by"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/comments_header_title" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="Author Authorsson"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/comments_header_title"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp" />

    <se.ntlv.newsbringer.customviews.DateView
        android:id="@+id/submission_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        tools:text="8 hours"
        app:layout_constraintBaseline_toBaselineOf="@+id/submission_time_suffix"
        app:layout_constraintEnd_toStartOf="@+id/submission_time_suffix"
        app:layout_constraintRight_toLeftOf="@+id/submission_time_suffix"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/submission_time_suffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/literal_ago"
        android:textStyle="italic"
        app:layout_constraintRight_toLeftOf="@+id/icon_comment"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/comments_header_title"
        android:layout_marginTop="8dp" />


    <ImageView
        android:id="@+id/icon_score"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_score_description"
        android:src="@drawable/ic_score_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/score" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:minEms="2"
        tools:text="433"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/icon_score" />

    <ImageView
        android:id="@+id/icon_comment"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/comment_bubble_description"
        android:src="@drawable/ic_comment_24dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/icon_score"
        app:layout_constraintTop_toBottomOf="@+id/icon_score"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/icon_score" />

    <TextView
        android:id="@+id/comment_count"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center"
        android:minEms="2"
        tools:text="1337"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/score"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/score"
        app:layout_constraintBottom_toBottomOf="@+id/icon_comment" />


    <TextView
        android:id="@+id/submission_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="all"
        tools:text="text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/by"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>

