<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:paddingBottom="8dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/ordinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minEms="1"
        android:text="Large Text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="78"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/news_item_title"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/primary_text_light"
        tools:text="Making Humans a Multiplanetary Species [video]"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/ordinal"
        app:layout_constraintLeft_toRightOf="@+id/ordinal"
        android:layout_marginStart="8dp" />


    <ImageView
        android:id="@+id/icon_score"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:contentDescription="@string/icon_score_description"
        android:src="@drawable/ic_score_24dp"
        app:layout_constraintEnd_toStartOf="@id/score"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:gravity="center"
        android:minEms="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="433"
        tools:layout_editor_absoluteX="335dp" />

    <ImageView
        android:id="@+id/icon_comment"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:contentDescription="@string/comment_bubble_description"
        android:src="@drawable/ic_comment_24dp"
        app:layout_constraintEnd_toStartOf="@id/score"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/icon_score"
        app:layout_constraintTop_toBottomOf="@+id/icon_score"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/icon_score" />

    <TextView
        android:id="@+id/comment_count"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:gravity="center"
        android:minEms="2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1337"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/score"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/score" />


    <TextView
        android:id="@+id/by_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_prefix"
        app:layout_constraintStart_toStartOf="@id/news_item_title"
        app:layout_constraintBaseline_toBaselineOf="@+id/by"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/news_item_title" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/by_prefix"
        tools:text="Author Authorsson"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/news_item_title"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/by_prefix" />

    <se.ntlv.newsbringer.customviews.DateView
        android:id="@+id/news_item_submission_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/by"
        tools:text="8 hours"
        app:layout_constraintBaseline_toBaselineOf="@+id/by"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/by" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/literal_ago"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/news_item_submission_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/news_item_submission_time"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/news_item_submission_time" />

</android.support.constraint.ConstraintLayout>
